--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -3,11 +3,17 @@ en:
     placeholders:
       quote:
         name: Name of your quote
-    label:
+    labels:
       quote:
         name: Name
+      line_item_date:
+        date: Date
+
   helpers:
     submit:
       quote:
         create: Create quote
         update: Update quote
+      line_item_date:
+        create: Create date
+        update: Update date
