--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -8,6 +8,9 @@ en:
         description: Description (optional)
         quantity: 1
         unit_price: $100.00
+      user:
+        email: e.g abc@xyz.com
+        password: "******"
     labels:
       quote:
         name: Name
@@ -18,6 +21,9 @@ en:
         description: Description
         quantity: Quantity
         unit_price: Unit price
+      user:
+        email: Email
+        password: Password
 
   helpers:
     submit:
